# llm-agent-playground

./: .gitignore  README.md
EchoMem/EchoMem/: README.md
GA-Based Context Evolution Prototype/: .env.example  README.md  README2.md  main.py  pyproject.toml  test_loguru.py  verify_ga.py
GA-Based Context Evolution Prototype/src/: __init__.py  environment.py  evolution.py  main.py  models.py  mutator.py  nodes.py  simulation.py  state.py
GA-Based Context Evolution Prototype/src/agent/ga_context_evolution/: __init__.py  agent.py  config.py  nodes.py  prompts.py  schema.py  utils.py
GA-Based Context Evolution Prototype/src/utils/: llm_factory.py  monitor.py
MarkovReading/: README.md  main.py  架构图.excalidraw
ToolCall_or_StructOutput/: .gitignore  README.md  pyproject.toml  使用说明.md  运行示例.md
ToolCall_or_StructOutput/src/: main.py
ToolCall_or_StructOutput/src/core/: util.py
ToolCall_or_StructOutput/src/utils/: chinese_metrics.py  llm_factory.py  metrics.py
thin_king/: AUTHORSAY.md  README.md  main.py  requirements.txt  setup.py  test_import.py  test_literal_keys.py  think_king.excalidraw
thin_king/common/: __init__.py  config.py  prompts.py  tools.py  utils.py
thin_king/src/: agent.py  agent_v1.py  agent_v2.py  agent_v3.py  agent_v3_5.py  agent_v4.py  agent_v5.py  config.py  prompt.py
thin_king/test/: test.py
what_toolcall_essence/: README.md  main.py
任意中断llmDemo/: demo.py
工具与交互解耦的ReAct/: README.md  demo.py  langgraph_interrupt_demo.py
工具与交互解耦的ReAct/agent/: __init__.py  async_interrupt_manager.py  react_agent.py
工具与交互解耦的ReAct/tool/: __init__.py  tool_registry.py
工具解耦的Agent模式demo/: demo_README.md  requirements.txt  run_demo.py  simple_state_demo.py  state_driven_agent_demo.py
工具解耦的Agent模式demo/状态驱动的工具调用模式demo/: README.md
感知型智能体架构demo/: DEMO_README.md  README.md  mvp_byLangraph.py  perception_agent.py  requirements.txt  run_demo.py
感知型智能体架构demo/PerceptionLayer/Sensor/: README.md  base.py
